# Bot_conversacional

./: .env.example  .gitignore  Makefile  README.md  context.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: main.py
backend/api/: __init__.py  router.py
backend/core/: __init__.py  config.py  exceptions.py
backend/insights/: __init__.py  analyzer.py  charts.py  narrator.py  schemas.py  sections.py  service.py
backend/prompts/: metric_dictionary.py  system_prompt.py
backend/repositories/: __init__.py  database.py  metrics_repository.py
backend/schemas/: chat.py
backend/services/: __init__.py  bot_service.py  llm_service.py  memory_service.py
backend/tools/: _caveats.py  _utils.py  aggregate.py  compare_metrics.py  filter_zones.py  get_trend.py  multivariate.py  orders_growth.py  registry.py
docs/: architecture.md  cleaning_report.md  data_quality_report.md
frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ConversationRuntime.tsx  ErrorBanner.tsx  Header.tsx  SuggestionsStrip.tsx  Thread.tsx  ToolsUsedBadge.tsx
rappi-bot/: .env.example  .gitignore  README.md  pyproject.toml
rappi-bot/backend/: __init__.py  main.py
rappi-bot/docs/: cost_estimation.md  data_quality_report.md
rappi-bot/scripts/: clean_data.py
rappi-bot/tests/: conftest.py
scripts/: __init__.py  clean_data.py  explore_data.py  smoke_test_bot.py
tasks/: lessons.md  todo.md
tests/: __init__.py  conftest.py
tests/test_api/: test_chat.py
(+36 files in other folders)
